@@ -22,6 +22,13 @@ sleepbeforegetalerts    = 2
 sleepbeforenexttest     = 2
 sleepbeforetwoftp       = 2
 
+[PROXY]
+useproxy                = 0
+host                    = 192.168.100.1
+port                    = 8080
+user                    = pilou
+pass                    = oops
+
 [TESTS]
 clientSideAttacks       = 1
 testRules               = 1
